@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/apache">ASL</license>
  <notes>
+* [jan] Fix highlighting of menu entries.
 * [jan] Restore compatibility with PHP 5.3 (Bug #12306).
  </notes>
  <contents>
@@ -1287,6 +1288,7 @@
    <date>2013-06-04</date>
    <license uri="http://www.horde.org/licenses/apache">ASL</license>
    <notes>
+* [jan] Fix highlighting of menu entries.
 * [jan] Restore compatibility with PHP 5.3 (Bug #12306).
    </notes>
   </release>
